@@ -1,6 +1,3 @@
-# Copyright (c) 2004 Zope Corporation and Plone Solutions
-# ZPL 2.1 license
-
 import unittest
 from Products.PluginIndexes.PathIndex.tests.testPathIndex import PathIndexTests
 
